<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_operation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nogsdiva.accountmanager.activite.OperationActivity">

    <TextView
        android:text="@string/choisir_une_operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="108dp"
        android:layout_marginStart="108dp"
        android:id="@+id/textop"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:paddingLeft="8dp" />

    <Button
        android:text="@string/versement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="76dp"
        android:id="@+id/btn4"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark" />

    <Button
        android:text="@string/retrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn4"
        android:layout_alignLeft="@+id/btn4"
        android:layout_alignStart="@+id/btn4"
        android:layout_marginTop="51dp"
        android:id="@+id/btn5"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:paddingRight="40dp" />

    <Button
        android:text="@string/virement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn5"
        android:layout_alignLeft="@+id/btn5"
        android:layout_alignStart="@+id/btn5"
        android:layout_marginTop="58dp"
        android:id="@+id/btn6"
        android:paddingRight="20dp"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

</RelativeLayout>
