<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_virement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nogsdiva.accountmanager.activity.TransferActivity">

    <TextView
        android:text="@string/choisir_un_compte_destinataire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:id="@+id/textView3"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <TextView
        android:text="@string/_3_bussinessaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choix2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/choix3"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/_1_checkingaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/choix1"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp" />

    <TextView
        android:text="@string/_2_savingaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/choix2"
        tools:text="2. SavingAccount"
        android:layout_below="@+id/choix1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/choix"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/choix3"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp" />

    <Button
        android:text="@string/ok"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/btok"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/holo_green_light"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/choix1"
        android:layout_toRightOf="@+id/mntt"
        android:layout_toEndOf="@+id/mntt"
        android:id="@+id/initialv" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/mntt"
        android:layout_below="@+id/btok"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="entrer un montant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mont"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_alignTop="@+id/btok"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
